Fixed double scroll bar issue cause by having auto scroll on both the parent and child

--- a/src/pages/Reception.css
+++ b/src/pages/Reception.css
@@ -1,7 +1,6 @@
 .reception-content {
   max-width: 800px;
-  max-height: 100vh;
-  overflow-y: auto;
+
   padding: 2rem;
   background: rgba(
     128,
